Razor working now

--- a/www/_views/SSVE.html
+++ b/www/_views/SSVE.html
@@ -20,13 +20,13 @@
         <button type="submit">Submit</button>
     </form>
 
-
+    <h1><a href="/razor">Razor</a></h1>
     <br />
     <br />
     <h1>Client Demos</h1>
     <ul>
-        <li><a href="/820c512a-4280-4072-b125-581743296652/home">Client One</a></li>
-        <li><a href="/b2a667fa-aed5-4ea1-b21b-9f7094b38044/home">Client Two</a></li>
+        <li><a href="/820c512a-4280-4072-b125-581743296652/razor">Client One</a></li>
+        <li><a href="/b2a667fa-aed5-4ea1-b21b-9f7094b38044/razor">Client Two</a></li>
     </ul>
 </body>
 </html>
